source/css/maya.css
@font-face {
  font-family: "Univers UltraCondensed";
  src: local("Univers 59 Ultra Condensed.ttf"),
  url(../../assets/fonts/Univers 59 Ultra Condensed.ttf);
}
@font-face {
  font-family: "Univers 75 Black";
  src: local("Univers 75 Black.ttf"),
  url(../../assets/fonts/Univers 75 Black.ttf);
}
@font-face {
  font-family: "Serifa Std";
  src: local("SerifaStd-Roman.otf"),
  url(../../assets/fonts/SerifaStd-Roman.otf);
}

body {
  background: url(../../assets/images/theme/bg.jpg) repeat;
  color: rgb(255,255,255);
  font-family: "Serifa Std";
  height: 768px;
  overflow: hidden;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
h1 {
  float: left;
  padding-bottom: 20px;
  margin: 0;
}
.level-3 #wrapper h1 {
  width: 400px;
  margin: 10px 0 20px;
}

/**
 * Replace text with images.
 * Needed on exhibit PCs running Windows.
 */
.text-replacement {
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}
#wrapper h1.text-replacement {
  width: 695px;
  height: 61px;
  background: url(../../assets/images/text/headline-eng.png) no-repeat;
}
body.level-3 #wrapper h1.text-replacement {
  background: url(../../assets/images/text/headline-L3-eng.png) no-repeat;
  height: 111px;
  width: 396px;
}
body.spanish #wrapper h1.text-replacement {
  width: 876px;
  height: 77px;
  background: url(../../assets/images/text/headline-esp.png) no-repeat;
  padding-bottom: 14px;
}
body.level-3.spanish #wrapper h1.text-replacement {
  background: url(../../assets/images/text/headline-L3-esp.png) no-repeat;
  width: 442px;
  height: 117px;
}

/* Dialogs */
.help_overlay h1 {
  height: 46px;
}
body.spanish h1#splash-title {
  background: url(../../assets/images/text/dialog-1-esp.png) no-repeat;
  width: 492px;
  height: 93px;
}
h1#splash-title {
  background: url(../../assets/images/text/dialog-1-eng.png) no-repeat;
  width: 451px;
}
body.spanish h1#level-2 {
  background: url(../../assets/images/text/dialog-2-esp.png) no-repeat;
  width: 76px;
}
h1#level-2 {
  background: url(../../assets/images/text/dialog-2-eng.png) no-repeat;
  width: 78px;
}
body.spanish h1#level-3 {
  background: url(../../assets/images/text/dialog-3-esp.png) no-repeat;
  width: 75px;
}
h1#level-3 {
  background: url(../../assets/images/text/dialog-3-eng.png) no-repeat;
  width: 77px;
}
body.spanish h1#win-title {
  background: url(../../assets/images/text/dialog-4-esp.png) no-repeat;
  width: 114px;
  height: 55px;
}
h1#win-title {
  background: url(../../assets/images/text/dialog-4-eng.png) no-repeat;
  width: 115px;
}

/* Header */
div#language_bar {
  color: rgba(255,255,255,.5);
  height: 34px;
  padding-top: 16px;
  font-family: "Univers 75 Black";
  background: url(../../assets/images/theme/bg_header.png) repeat-x;
  text-transform: uppercase;
  font-size: 12px;
}
div#language_bar span#en {
  margin-right: 56px;
}
div#language_bar span#es {
  margin-right: 100px;
}
span.selected {
  color: rgb(255,255,255);
}
span#en,
span#es,
span#restart {
  float: right;
}

/* Layout */
div#wrapper {
  background: none;
  width: auto;
  padding: 10px 60px 0;
  margin: 0 auto;
}
#column-left {
  clear: both;
  width: 450px;
  float: left;
}
#column-middle {
  background: #262626;
  margin: 0 60px 0 20px;
  width: 460px;
  float: left;
  padding-top: 30px;
}
.level-2 #column-middle, .level-3 #column-middle {
  padding-top: 22px;
}
.level-3 #column-middle {
  position: relative;
  top: -165px;
}
#column-right {
  float: right;
  width: 250px;
}
.level-3 #column-right {
  position: relative;
  top: -70px;
}
footer {
  position: fixed;
  bottom: 0;
  clear: both;
  width: 1211px; /* 1366 - 85 - 70 = 1211 */
  height: 55px;
  padding: 0 70px 0 85px;
}

/* Initially hidden content */
body.level-3 .level-1 {
  display: none;
}
body.level-3 .level-1.level-3 {
  display: block;
}
#facts p,
#zero_hint {
  display: none;
}

/* Left column */
#instructions p {
  font-size: 18px;
  width: 400px;
}
#column-left #instructions {
  margin: 10px 0 -20px;
  min-height: 75px;
}
body.level-1 #instructions {
  min-height: 50px;
}
#instructions p.level-1 {
  display: none;
}
#instructions p {
  margin: 0;
}
div#glyphs {
  margin: 0 auto;
  text-align: center;
}
#glyphs ul {
  clear: both;
  padding: 0;
  margin: 0 0 50px 0;
}
#glyphs ul li {
  float: left;
  list-style-type: none;
  margin: 5px 20px 8px 0;
}
#glyphs ul li.new-row {
  clear: both;
}
#glyphs li img {
  box-shadow: 0 0 7px #000;
  cursor: pointer;
  z-index: 99;
}

/* Middle column */
#column-middle {
  font-family: "Univers 75 Black";
}
body.level-1 .bucket {
  position: relative;
  z-index: 0;
}
.bucket {
  clear: both;
  float: left;
  margin-bottom: 12px;
}
.bucket .multiplier {
  margin-right: 28px;
  position: relative;
  top: 20px;
  text-align: right;
  width: 140px;
  font-size: 28px;
}
.multiplier, .equals, .bucketSum {
  float: left;
  color: #c0bfbf;
}
.equals {
  position: relative;
  top: 17px;
  left: 20px;
  margin-right: 8px;
  font-size: 32px;
}
div.bucketSum {
  float: left;
  position: relative;
  top: 10px;
  text-align: right;
  width: 50px;
  font-family: "Univers UltraCondensed";
  font-size: 38px;
}
div.plus {
  float: right;
  font-size: 24px;
  position: relative;
  clear: left;
  margin-top: -30px;
}
body.level-2 div.bucketSum {
  width: 100px;
}
body.level-2 div.plus {
  left: -74px;
}
body.level-3 div.bucketSum {
  width: 120px;
}
body.level-3 .plus {
  left: -55px;
}
.bucket div.dropzone {
  float: left;
  border: 5px solid rgb(0, 90, 132);
  border-radius: 8px;
  box-shadow: inset 0 0 10px #000;
  background: rgb(191,191,191);
  color: #777;
  height: 85px;
  width: 85px;
}
body.level-2 .bucket div.dropzone,
body.level-3 .bucket div.dropzone {
  height: 75px;
  width: 75px;
}
.bucket div.dropzone.full {
  opacity: .8;
}
div#live_sum {
  clear: both;
}
#live_sum p {
  float: right;
  background: url(../../assets/images/text/current-total-eng.png) no-repeat;
  width: 112px;
  height: 39px;
  margin: 0 40px 0 0;
  padding: 8px 0px 0 0;
}
body.level-2 #live_sum,
body.level-3 #live_sum {
  position: relative;
  top: -10px;
}
body.spanish #live_sum p {
  background: url(../../assets/images/text/current-total-esp.png) no-repeat;
}
div#total {
  font-size: 44px;
  clear: both;
  text-align: right;
  margin-right: 50px;
}
div#status {
  width: 406px;
  margin: 0 auto;
  clear: both;
}
body.level-2 div#status,
body.level-3 div#status {
  position: relative;
  top: -10px;
}
body.level-2 div#status div,
body.level-3 div#status div {
  padding: 40px 0px 8px 0px;
}
div#status p {
  background: url(../../assets/images/text/your-answer-eng.png) no-repeat;
  padding: 20px 20px 0 20px;
  width: 406px;
  height: 12px;
  margin: 10px auto;
}
body.spanish div#status p {
  background: url(../../assets/images/text/your-answer-esp.png) no-repeat;
}
div#status div {
  float: left;
  text-transform: uppercase;
  font-size: 12px;
  letter-spacing: .08em;
  padding: 40px 0px 30px 0px;
}
div#status div#correct {
  opacity: .3;
  background: url(../../assets/images/theme/correct.png) no-repeat top center;
}
#status img {
  float: left;
  margin: 0 30px;
}
body.spanish #status img {
  margin: 0 20px;
}
div#status div#incorrect {
  background: url(../../assets/images/theme/incorrect.png) no-repeat top center;
}
div#status div#btn-next {
  background: url(../../assets/images/theme/bg_next.png) no-repeat;
  border: none;
  width: 171px;
  height: 41px;
  border: none;
  box-shadow: 0px 0px 10px #262626;
  display: none;
  padding: 0;
  float: right;
}
#btn-next span {
  text-transform: uppercase;
  font-size: 12px;
  color: #FFFFFF;
  position: relative;
  top: 12px;
  left: 13px;
}
body.spanish #btn-next span {
  left: 36px;
}
#column-middle, div#fact-wrap {
  box-shadow: 0 0 15px #000;
}

/* Right column */
div#bubble-wrap {
  background: url(../../assets/images/theme/circle.png) no-repeat;
  height: 245px;
  width: 245px;
  text-align: center;
  position: relative;
  top: -10px;
}
#bubble-wrap p {
  width: 150px;
  font-style: italic;
  margin: 0 auto 10px;
}
body.level-2 div#target_value {
  font-size: 32px;
}
body.level-3 div#target_value {
  font-size: 26px;
}
#bubble-wrap p, div#target_value {
  position: relative;
  top: 60px;
}
div#target_value {
  font-size: 50px;
  font-family: "Univers 75 Black";
  clear: both;
  text-shadow: 2px 2px 2px rgba(0,0,0,.4);
}
div#fact-wrap {
  background: #262626;
  width: 260px;
}
div#facts {
  background: url(../../assets/images/theme/underline.png) repeat-x 0 26px;
  width: 215px;
  margin: 0 auto;
}
div#facts h4 {
  font-family: "Univers UltraCondensed";
  letter-spacing: .12em;
  font-size: 16px;
  text-align: center;
  display: none;
  text-transform: uppercase;
  background: #262626;
  padding: 20px 10px 0 10px;
  margin: 0 auto;
  width: 50px;
}
div#facts p {
  padding: 0 0 30px;
  text-align: center;
  font-style: italic;
}

/* Footer */
footer {
  background: url(../../assets/images/theme/bg_footer.png) repeat-x;
  font-family: "Univers 75 Black";
  text-transform: uppercase;
  font-size: 12px;
}
span#level, span#counter {
  position: relative;
  top: 23px;
}
div.footer-tab {
  display: inline-block;
  background: #000;
  border: 1px solid white;
  border-bottom: none;
  border-radius: 10px 10px 0 0;
  position: relative;
  top: 10px;
  margin-right: 8px;
}
div.footer-tab span {
  height: 55px;
  display: inline-block;
  padding: 0 32px;
  position: relative;
  top: 13px;
}
div.footer-tab.level-2.level-3 span {
  padding: 0 42px;
}
div#restart-wrap {
  color: rgb(0, 90, 132);
  background: url(../../assets/images/theme/bg_footer_line.png) repeat-y;
  float: right;
  position: relative;
  top: 10px;
  right: -70px;
  height: 45px;
  padding-left: 70px;
}
span#restart {
  position: relative;
  top: 13px;
  margin-right: 70px;
}
span#counter {
  padding: 0 20px;
  margin: 0 10px;
}

/* Dialogs */
.ui-widget {
  font-family: Helvetica;
}
.ui-widget-header {
  border: none;
  background: none;
  font-family: "Univers39-UltraCondensedThin";
  text-shadow: 2px 2px 4px rgba(0,0,0,1);
  color: rgb(128, 161, 182);
  text-transform: uppercase;
  font-size: 42px;
}
.ui-dialog p {
  margin: 0;
  clear: both;
  line-height: 1.5em;
}
.ui-dialog .ui-dialog-content {
  padding: 0 1.5em;
}
.ui-dialog .ui-dialog-titlebar {
  padding: 10px 20px 0;
}
.ui-widget-overlay {
  opacity: .9;
  background: #333;
}
.ui-widget-content {
  border: none;
  color: #FFFFFF;
  background: #262626;
}
.level-2 .ui-widget-content img,
.level-3 .ui-widget-content img {
  margin: 50px 100px 0;
}
.help_overlay {
  display: none;
}
.ui-widget {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #333333;
}
.ui-widget-overlay {
  opacity: .9;
}
.no-close .ui-dialog-titlebar,
.no-close .ui-dialog-titlebar-close {
  display: none;
}
.no-close {
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
}
.ui-dialog {
  padding-top: 30px;
}
.help_overlay ul li {
  list-style-type: none;
  min-height: 40px;
  padding-left: 40px;
}
.help_overlay ul li.dots {
  background: url('../../assets/images/numbers/1.png') no-repeat left top;
  background-size: 30px 30px;
}
.help_overlay ul li.lines {
  background: url('../../assets/images/numbers/5.png') no-repeat left top;
  background-size: 30px 30px;
}
.help_overlay ul li.six {
  background: url('../../assets/images/numbers/6.png') no-repeat left top;
  background-size: 30px 30px;
}

